# yandex-cpp-middle-sprint3

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.py  task.txt
.devcontainer/: Dockerfile  devcontainer.json
include/: book.hpp  book_database.hpp  comparators.hpp  concepts.hpp  filters.hpp  heterogeneous_lookup.hpp  statsistics.hpp
src/: main.cpp
tests/: db_test.cpp
